# gyokuro-engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  gyokuro-engine.code-workspace  run.sh
Gyokuro.xcodeproj/: project.pbxproj
Gyokuro.xcodeproj/xcshareddata/xcschemes/: Gyokuro.xcscheme
include/gyo/: gyo.h
include/gyo/core/: Engine.h
include/gyo/drawable/: AABBWireframe.h  TangentsRenderer.h
include/gyo/internal/camera/: CameraNode.h  FlyCamera.h
include/gyo/internal/renderer/: Renderer.h
include/gyo/internal/shading/: Material.h  Texture2D.h  TextureCube.h
include/gyo/lighting/: DirectionalLight.h  LightNode.h  PointLight.h  SpotLight.h
include/gyo/mesh/: Cube.h  Mesh.h  Model.h  ModelNode.h  Pyramid.h  Quad.h  Skybox.h  Sphere.h  Torus.h
include/gyo/resources/: Resources.h
include/gyo/scene/: SceneController.h
include/gyo/shading/: GoochMaterial.h  PBRMaterial.h  PhongMaterial.h  UnlitMaterial.h
resources/fonts/: README.md  SourceCodePro-Regular-Layout.csv  SourceCodePro-Regular-SDF-Layout.csv  Ubuntu-Regular-MSDF-Layout.csv
resources/models/: Dice.fbx
resources/shaders/: brdfConvolution.frag  cubemap.vert  default.vert  eqRectToCubemap.frag  eqRectToCubemap.vert  glyph.frag  glyph.vert  gooch.frag  irradianceConvolution.frag  pbr.frag  phong.frag  prefilterConvolution.frag  screen.frag  screen.vert  shader.frag  shader.vert  skybox.frag  skybox.vert  solidColor.frag  tangents.frag  tangents.geom  tangents.vert  unlitColorTexture.frag  vertexColor.frag  wireframe.vert
resources/shaders/include/: brdf.glsl  camera.glsl  common.glsl  convolution.glsl  lighting.glsl  lights.glsl  normal.glsl  phong_lighting.glsl  phong_material.glsl  physical_lighting.glsl  physical_material.glsl
resources/textures/: brdfLUT.hdr
samples/: CMakeLists.txt
samples/blending/: CMakeLists.txt  main.cpp
samples/drawables/: CMakeLists.txt  main.cpp
samples/env_map/: CMakeLists.txt  main.cpp
samples/gooch_lighting/: CMakeLists.txt  main.cpp
samples/models/: CMakeLists.txt  main.cpp
samples/pbr/: CMakeLists.txt  main.cpp
samples/phong_lighting/: CMakeLists.txt  main.cpp
samples/primitives/: CMakeLists.txt  main.cpp
samples/skybox/: CMakeLists.txt  main.cpp
samples/vfc/: CMakeLists.txt  main.cpp
src/: FileUtils.h  main.cpp  scene_loader.h
src/camera/: Camera.cpp  Camera.h  CameraNode.cpp  CameraNode.h  FlyCamera.cpp  FlyCamera.h  OrthographicCamera.h  PerspectiveCamera.h
src/core/: Engine.cpp  Engine.h
src/drawable/: AABBWireframe.cpp  AABBWireframe.h  TangentsRenderer.cpp  TangentsRenderer.h
src/glad/: glad.h
src/gyo/: gyo.h
src/gyo/camera/: Camera.cpp  Camera.h  CameraNode.cpp  CameraNode.h  FlyCamera.cpp  FlyCamera.h
src/gyo/core/: Engine.cpp  Engine.h
src/gyo/drawable/: AABBWireframe.cpp  AABBWireframe.h  IDrawable.h  TangentsRenderer.cpp  TangentsRenderer.h
src/gyo/geometry/: Cube.h  Geometry.h  InvertedCube.h  Pyramid.h  Quad.h  Sphere.h  Torus.h
src/gyo/lighting/: DirectionalLight.h  Light.h  LightNode.h  LightsUBO.cpp  LightsUBO.h  PointLight.h  SpotLight.h
src/gyo/math/: Frustum.h  Plane.h  Sphere.h
src/gyo/mesh/: Cube.h  Mesh.cpp  Mesh.h  Model.cpp  ModelNode.cpp  ModelNode.h  Pyramid.h  Quad.h  Skybox.cpp  Skybox.h  Sphere.h  Torus.h  Vertex.h
src/gyo/renderer/: DrawCall.h  RenderState.cpp  Renderer.cpp  Renderer.h  ScreenQuad.cpp  ScreenQuad.h
src/gyo/resources/: DataLoader.cpp  DataLoader.h  FontLoader.cpp  FontLoader.h  IBLEnvironmentLoader.cpp  IBLEnvironmentLoader.h  ModelLoader.cpp  ModelLoader.h  Resources.cpp  Resources.h  ShaderLoader.cpp  ShaderLoader.h  TextureLoader.cpp  TextureLoader.h
src/gyo/scene/: IBLEnvironment.h  SceneController.cpp  SceneController.h  SceneNode.cpp  SceneNode.h
src/gyo/shading/: GoochMaterial.cpp  GoochMaterial.h  Material.cpp  Material.h  PBRMaterial.cpp  PBRMaterial.h  PhongMaterial.cpp  PhongMaterial.h  Shader.cpp  Shader.h  ShaderMaterial.cpp  ShaderMaterial.h  ShaderSemantics.h  Texture2D.cpp  Texture2D.h  TextureCube.cpp  TextureCube.h  TextureDefines.h  UnlitMaterial.cpp  UnlitMaterial.h
src/gyo/ui/: Font.cpp  Font.h  SDFFont.cpp  SDFFont.h  SDFText.cpp  SDFText.h  Text.cpp  Text.h
src/gyo/utilities/: Clock.h  FileSystem.h  FrameStats.h  FrameTimer.h  GetError.cpp  GetError.h  Log.h
src/lighting/: DirectionalLight.h  Light.h  LightNode.cpp  LightNode.h  LightsUBO.cpp  LightsUBO.h  PointLight.h  SpotLight.h
src/math/: AABB.h  Frustum.h  Plane.h  Sphere.h
src/mesh/: AABBWireframe.cpp  AABBWireframe.h  Cube.cpp  Cube.h  Geometry.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ModelNode.cpp  ModelNode.h  Pyramid.h  Quad.cpp  Quad.h  Skybox.cpp  Skybox.h  Sphere.h  TangentsRenderer.cpp  TangentsRenderer.h  Torus.h
src/renderer/: DrawCall.h  IDrawable.h  Mesh.cpp  Mesh.h  RenderState.cpp  RenderState.h  RenderType.h  Renderer.cpp  Renderer.h  ScreenQuad.cpp  ScreenQuad.h  Shader.cpp  Shader.h  Texture2D.cpp  Texture2D.h
src/resources/: FontLoader.cpp  FontLoader.h  ModelLoader.cpp  ModelLoader.h  Resources.cpp  Resources.h  ShaderLoader.cpp  ShaderLoader.h  TextureLoader.cpp  TextureLoader.h
src/scene/: SceneController.cpp  SceneController.h  SceneNode.cpp  SceneNode.h
src/shading/: GoochMaterial.cpp  GoochMaterial.h  Material.h  PBRMaterial.cpp  PhongMaterial.cpp  PhongMaterial.h  Shader.cpp  Shader.h  Texture2D.cpp  Texture2D.h  TextureCube.cpp  TextureCube.h  UnlitMaterial.cpp  UnlitMaterial.h
src/ui/: Font.cpp  Font.h  Text.cpp  Text.h
src/utilities/: Clock.h  FileSystem.h  FrameStats.h  Hash.h
